# lfest-rs

./: .gitignore  2  Cargo.toml  README.md  active_orders.tla  clippy.toml  codebook.toml  flake.nix  lfest.tla  lfest_figuring_out_limit_order_margin_cost.ods  mprocs.yaml  order_margin.tla  perf.data.old  position.tla  rustfmt.toml  shell.nix
.buildkite/: pipeline.yaml
.direnv/: flake-profile  flake-profile-1-link
.github/: pull_request_template.md
.github/workflows/: ci.yml
benches/: check_active_orders.rs  decimal_comparison.rs  market_update_trade.rs  order_book.rs  order_margin.rs  position.rs  smart_candle.rs  sorted_orders.rs  submit_limit_order.rs  submit_market_order.rs  trade_update.rs  update_state.rs
examples/: basic.rs  load_trades.rs  main.rs  use_candles.rs  use_trades.rs
mutants.out/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  unviable.txt
mutants.out.old/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  unviable.txt
mutants.out.old/diff/: src__accounting__account.rs_line_38_col_28.diff  src__exchange.rs_line_447_col_30.diff  src__exchange.rs_line_639_col_46.diff  src__load_trades_from_csv.rs_line_21_col_5.diff  src__market_state.rs_line_87_col_9.diff  src__market_update__candle_update.rs_line_73_col_37.diff  src__market_update__smart_candle.rs_line_126_col_9.diff  src__mock_exchange.rs_line_30_col_5.diff  src__order_filters__price_filter.rs_line_203_col_18.diff  src__order_filters__quantity_filter.rs_line_98_col_23.diff  src__order_filters__quantity_filter.rs_line_98_col_52.diff  src__order_margin.rs_line_152_col_23.diff  src__order_margin.rs_line_159_col_23.diff  src__position.rs_line_49_col_9.diff  src__position_inner.rs_line_116_col_9.diff  src__risk_engine__isolated_margin.rs_line_167_col_41.diff  src__risk_engine__isolated_margin.rs_line_187_col_9.diff  src__risk_engine__isolated_margin.rs_line_219_col_68.diff  src__types__market_order.rs_line_101_col_9.diff  src__types__market_order.rs_line_118_col_9.diff  src__types__smol_currency__base_currency.rs_line_236_col_21.diff  src__types__smol_currency__base_currency.rs_line_87_col_38.diff  src__types__smol_currency__base_currency.rs_line_87_col_9.diff  src__types__smol_currency__quote_currency.rs_line_103_col_39.diff  src__types__smol_currency__quote_currency.rs_line_159_col_9.diff
mutants.out/diff/: src__accounting__transaction.rs_line_42_col_5.diff  src__exchange.rs_line_381_col_38.diff  src__load_trades_from_csv.rs_line_54_col_43.diff  src__market_update__candle_update.rs_line_60_col_35.diff  src__market_update__candle_update.rs_line_61_col_37.diff  src__market_update__smart_candle.rs_line_191_col_9.diff  src__market_update__trade_update.rs_line_66_col_37.diff  src__order_filters__price_filter.rs_line_130_col_28.diff  src__order_filters__price_filter.rs_line_150_col_58.diff  src__order_filters__price_filter.rs_line_60_col_9.diff  src__order_margin.rs_line_134_col_56.diff  src__order_margin.rs_line_150_col_41.diff  src__order_rate_limiter.rs_line_34_col_23.diff  src__order_rate_limiter.rs_line_54_col_27.diff  src__position.rs_line_168_col_56.diff  src__position_inner.rs_line_145_col_23.diff  src__position_inner.rs_line_169_col_9.diff  src__risk_engine__isolated_margin.rs_line_164_col_41.diff  src__risk_engine__isolated_margin.rs_line_193_col_37.diff  src__risk_engine__isolated_margin.rs_line_215_col_35.diff  src__risk_engine__isolated_margin.rs_line_228_col_9.diff  src__types__limit_order.rs_line_249_col_41.diff  src__types__mod.rs_line_72_col_9.diff  src__types__smol_currency__base_currency.rs_line_141_col_9.diff  src__types__smol_currency__base_currency.rs_line_236_col_21.diff  src__utils.rs_line_61_col_5.diff
nix/: cargo-upgrades.nix  creusot.nix
position.toolbox/: .project  position___Model_1.launch  position___Model_1_SnapShot_1748786031807.launch  position___Model_1_SnapShot_1748786173473.launch  position___Model_1_SnapShot_1748786187556.launch  position___Model_1_SnapShot_1748786200880.launch  position___Model_1_SnapShot_1748786621344.launch  position___Model_1_SnapShot_1748787012642.launch  position___Model_1_SnapShot_1748787078810.launch  position___Model_1_SnapShot_1748787131673.launch  position___Model_1_SnapShot_1748787190150.launch
position.toolbox/Model_1/: MC.cfg  MC.out  MC.tla  MC_TE.out
position.toolbox/Model_1_SnapShot_1748786031807/: MC.cfg  MC.tla  MC_TE.out  position.tla
position.toolbox/Model_1_SnapShot_1748786173473/: MC.cfg  MC.out  MC.tla
position.toolbox/Model_1_SnapShot_1748786187556/: MC.cfg  MC.out  MC.tla  position.tla
position.toolbox/Model_1_SnapShot_1748786200880/: MC.cfg  MC.tla  MC_TE.out  position.tla
position.toolbox/Model_1_SnapShot_1748786621344/: MC.cfg  MC.tla  MC_TE.out  position.tla
position.toolbox/Model_1_SnapShot_1748787012642/: MC.cfg  MC.tla  MC_TE.out  position.tla
position.toolbox/Model_1_SnapShot_1748787078810/: MC.cfg  MC.out  MC.tla  position.tla
position.toolbox/Model_1_SnapShot_1748787131673/: MC.cfg  MC.out  MC.tla
position.toolbox/Model_1_SnapShot_1748787190150/: MC.cfg  MC.out  MC.tla
proptest-regressions/: position.txt
src/: acc_tracker.rs  acc_tracker_decimal.rs  account.rs  active_limit_orders.rs  clearing_house.rs  config.rs  config_decimal.rs  config_float.rs  contract_specification.rs  contracts.rs  cornish_fisher.rs  errors.rs  exchange.rs  exchange_decimal.rs  exchange_float.rs  execution_engine.rs  expect_messages.rs  fees_of_limit_orders.rs  futures_type.rs  fxmacrodata.rs  inv_exchange.rs  lib.rs  limit_order_margin.rs  load_trades_from_csv.rs  margin.rs  market_state.rs  matching_engine.rs  mock_exchange.rs  order_filters.rs  order_margin.rs  order_rate_limiter.rs  orders.rs  orders_decimal.rs  orders_float.rs  position.rs  position_inner.rs  risk_engine.rs  sample_returns_trigger.rs  sorted_orders.rs  test_helpers.rs  (+5 more)
src/account/: account.rs  account_impl.rs  active_limit_orders.rs  balances.rs  bids_asks.rs  mod.rs  position.rs  (+1 more)
tests/: inverse_futures.rs  limit_orders_only.rs  linear_futures.rs  partial_order_fill.rs  sine_wave_market_orders.rs
(+78 files in other folders)
