cargo-features = ["edition2024"]

[package]
name = "lfest"
version = "0.101.1"
authors = ["MathisWellmann <wellmannmathis@gmail.com>"]
edition = "2024"
license-file = "LICENSE"
description = "A leveraged perpetual futures exchange for simulated trading and backtesting"
repository = "https://github.com/MathisWellmann/lfest-rs"
readme = "README.md"
keywords = ["exchange", "trading", "simulation", "backest", "leverage"]
categories = ["finance", "simulation"]
exclude = ["/img", "/data", "/.idea", "/vendor", "/.direnv"]

[dependencies]
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
hashbrown = "0.15"
derive_more = { version = "2", features = ["full"] }
# const-decimal = { path = "../const-decimal", features = [
#   "serde",
# ] }
const-decimal = { git = "https://github.com/OliverNChalk/const-decimal", features = [
  "serde",
], version = "0.3.0" }
distrs = "0.2"
num-traits = "0.2"
typed-builder = "0.20"
getset = "0.1.2"
sliding_features = "6"
assert2 = "0.3"
num = "0.4"
glidesort = "0.1"
csv = "1"

trade_aggregation = { version = "12", optional = true }

[dev-dependencies]
rand = "0.9"
rand_distr = "0.5"
test-case = "3"
tracing-test = { version = "0.2", features = ["no-env-filter"] }
ron = "0.8"
criterion = "0.5"
# fpdec = { version = "0.10", features = ["serde-as-str", "num-traits"] }
fpdec = { version = "0.10.3", git = "https://github.com/MathisWellmann/fpdec.rs", rev = "40cf802", features = [
  "serde-as-str",
  "num-traits",
] }
trade_aggregation = "12"

[features]
trade_aggregation = ["dep:trade_aggregation"]

[[bench]]
name = "market_update_trade"
harness = false

[[bench]]
name = "submit_market_order"
harness = false

[[bench]]
name = "submit_limit_order"
harness = false

[[bench]]
name = "decimal_comparison"
harness = false

[[bench]]
name = "check_active_orders"
harness = false

[[bench]]
name = "smart_candle"
harness = false
