[package]
name = "lfest"
version = "0.134.0"
authors = ["MathisWellmann <wellmannmathis@gmail.com>"]
edition = "2024"
license-file = "LICENSE"
description = "A leveraged perpetual futures exchange for simulated trading and backtesting"
repository = "https://github.com/MathisWellmann/lfest-rs"
readme = "README.md"
keywords = ["exchange", "trading", "simulation", "backest", "leverage"]
categories = ["finance", "simulation"]
exclude = ["/img", "/data", "/.idea", "/vendor", "/.direnv"]

[lints.rust]
# checks for cases that are confusing between a negative literal and a negation that's not part of the literal.
# E.g.: denies this: `-1i32.abs();` // equals -1, while `(-1i32).abs()` equals 1
ambiguous_negative_literals = "deny"
# closure returning async block can be made into an async closure
# Using an async closure is preferable over a closure that returns an async block, since async closures are less restrictive in how its captures are allowed to be used.
# E.g.:
# - let c = |x: &str| async {};
# + let c = async |x: &str| {};
closure_returning_async_block = "deny"
# Not that someone would use precise capturing anyways.
# e.g.: unnessesary `use<...>` here:
# `fn test<'a>(x: &'a i32) -> impl Sized + use<'a> { x }`
impl_trait_redundant_captures = "deny"
# The macro_use attribute on an extern crate item
# causes macros in that external crate to be brought into the prelude of the crate,
# making the macros in scope everywhere.
# To bring macros from extern crates into scope,
# it is recommended to use a use import.
# E.g.:
# `use tracing::info`.
macro_use_extern_crate = "deny"
# detects non-ASCII identifiers like `let föö = 1;` and denies them.
non_ascii_idents = "deny"
# Trivial casts should be removed. E.g.: `let v = 10_f64 as f64;`
trivial_numeric_casts = "deny"
# detects cases where bindings are useless because they have the unit type () as their inferred type
# Creating a local binding with the unit type () does not do much and can be a sign of a user error,
# E.g.:
# fn main() {
#     let mut x = [1, 2, 3];
#     x[0] = 5;
#     let y = x.sort(); // useless binding as `sort` returns `()` and not the sorted array.
#     println!("{:?}", y); // prints "()"
# }
unit_bindings = "deny"
unused_lifetimes = "deny"
unused_imports = "deny"
unused_crate_dependencies = "deny"
unused_must_use = "deny"
unused_assignments = "deny"
# E.g:
# let x = 1;
# let _b = --x;
# Could be missinterpreted as a decrement operator which exists in other languages.
double_negations = "deny"
# Who would even drop copy types?
dropping_copy_types = "deny"
# checks for calls to std::mem::drop with a reference instead of an owned value., which does nothing.
dropping_references = "deny"
# Detects private dependencies that are exposed in a public interface.
exported_private_dependencies = "deny"
# For loops over `Option` or `Result` are better expressed with `if let Some(val) = opt_val` or similar.
for_loops_over_fallibles = "deny"
# let x: i32 = 42; // i32 implements Copy
# std::mem::forget(x); // A copy of x is passed to the function, leaving the original unaffected
forgetting_copy_types = "deny"
irrefutable_let_patterns = "deny"
# E.g.:
# struct Foo;
# let foo = &Foo;
# let clone: &Foo = foo.clone();
# For instance, Clone is implemented on all &T, but calling clone on a &T where T does not implement clone, actually doesn't do anything as references are copy
noop_method_call = "deny"
# This lint could produce:
# warning: multiple patterns overlap on their endpoints
#  --> lint_example.rs:5:5
#   |
# 4 |     0..=100 => { println!("small"); }
#   |     ------- this range overlaps on `100_u8`...
# 5 |     100..=255 => { println!("large"); }
#   |     ^^^^^^^^^ ... with this range
#   |
#   = note: you likely meant to write mutually exclusive ranges
overlapping_range_endpoints = "deny"
redundant_semicolons = "deny"
special_module_name = "deny"
unused_allocation = "deny"

# triggers for pub items not reachable from other crates -
# that means neither directly accessible, nor reexported (with pub use),
# nor leaked through things like return types.
# The intent can only be satisfied, however, if all items which contain this item are also publicly accessible.
# Thus, this lint serves to identify situations where the intent does not match the reality.
# If you wish the item to be accessible elsewhere within the crate, but not outside it, the pub(crate) visibility is recommended to be used instead.
# This more clearly expresses the intent that the item is only visible within its own crate.
# This makes it easier to spot unused code as well.
unreachable_pub = "warn"
unused_variables = "warn"
dead_code = "warn"
# Deprecated function calls should be replaced by the new function as soon as possible.
# Sometimes its just a hassle with large overhead, so it's just `warn`
deprecated = "warn"
# This won't be an issue because `cargo fmt` already formats it this way.
unused_import_braces = "warn"
# Pendantic AF, so just a warning
unused_qualifications = "warn"
redundant_lifetimes = "warn"
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }


[lints.clippy]
allow_attributes_without_reason = "deny" # Always include a reason for using `#[allow(...,, reason = "my reason")]`
as_underscore = "deny"                   # This can lead to unintended lossy conversion or into an unwanted type.
cast_possible_wrap = "deny"              # Wrapping `as` conversion needs to be handled explicitly.
# In release builds debug_assert! macros are optimized out by the compiler.
# Therefore mutating something in a debug_assert! macro results in different behavior between a release and debug build.
debug_assert_with_mut_call = "deny"
# Checks for impls of From<..> that contain panic!() or unwrap()
# TryFrom should be used if there’s a possibility of failure.
fallible_impl_from = "deny"
# Checks for usage of _.filter_map(_).next().
# Readability, this can be written more concisely as _.find_map(_).
filter_map_next = "deny"
# Checks for usage of Iterator::flat_map() where filter_map() could be used instead.
# Example:
# let nums: Vec<i32> = ["1", "2", "whee!"].iter().flat_map(|x| x.parse().ok()).collect();
# Use instead:
# let nums: Vec<i32> = ["1", "2", "whee!"].iter().filter_map(|x| x.parse().ok()).collect();
flat_map_option = "deny"
# Checks for usage of .map(|_| format!(..)).collect::<String>().
# his allocates a new string for every element in the iterator.
# This can be done more efficiently by creating the String once and appending to it in Iterator::fold,
# using either the write! macro which supports exactly the same syntax as the format! macro, or concatenating with + in case the iterator yields &str/String.
# Example
# fn hex_encode(bytes: &[u8]) -> String {
#     bytes.iter().map(|b| format!("{b:02X}")).collect()
# }
# Use instead:
# use std::fmt::Write;
# fn hex_encode(bytes: &[u8]) -> String {
#     bytes.iter().fold(String::new(), |mut output, b| {
#         let _ = write!(output, "{b:02X}");
#         output
#     })
# }
format_collect = "deny"
# Detects cases where the result of a format! call is appended to an existing String.
# Introduces an extra, avoidable heap allocation.
# 
# Example
# let mut s = String::new();
# s += &format!("0x{:X}", 1024);
# s.push_str(&format!("0x{:X}", 1024));
# 
# Use instead:
# use std::fmt::Write as _; // import without risk of name clashing
# let mut s = String::new();
# let _ = write!(s, "0x{:X}", 1024);
format_push_string = "deny"
unwrap_used = "deny"        # Always prefer `.expect("Some reason")`
needless_collect = "deny"

disallowed_methods = "warn"
# # Calling `.drain(..)`, instead of `.clear()` creates an unnecessary iterator that is dropped immediately.
clear_with_drain = "warn"
# Functions with a lot of lines are harder to understand and most likely will not fit on the screen.
# Threshold can be set with `too-many-lines-threshold` in `clippy.toml`
too_many_lines = "warn"
# Checks for types that derive PartialEq and could implement Eq.
# If a type T derives PartialEq and all of its members implement Eq, then T can always implement Eq.
# Implementing Eq allows T to be used in APIs that require Eq types. It also allows structs containing T to derive Eq themselves.
derive_partial_eq_without_eq = "warn"
# Scoped visibility modifiers cause a field to be accessible within some scope between public and private,
# potentially within an entire crate.
# This allows for fields to be non-private while upholding internal invariants, but can be a code smell.
# Scoped visibility requires checking a greater area, potentially an entire crate, to verify that an invariant is upheld,
# and global analysis requires a lot of effort.
field_scoped_visibility_modifiers = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
branches_sharing_code = "warn"
needless_continue = "warn"
# Check if a &mut function argument is actually used mutably.
# Less mut means less fights with the borrow checker. It can also lead to more opportunities for parallelization.
needless_pass_by_ref_mut = "warn"
needless_raw_strings = "warn"
# Does not make sense to have `Rc<Mutex<..>` because `Rc` cannot be sent to another thread, so `Mutex` synchronization is unnecessary.
rc_mutex = "warn"
ref_option_ref = "warn"
implicit_clone = "warn"

[dependencies]
tracing = { version = "0.1", features = ["release_max_level_info"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
derive_more = { version = "2", features = ["full"] }
# const-decimal = { path = "../const-decimal", features = [
#   "serde",
# ] }
const-decimal = { git = "https://github.com/OliverNChalk/const-decimal", features = [
  "serde",
], version = "0.3.0" }
num-traits = "0.2"
typed-builder = "0.23"
getset = "0.1.2"
assert2 = "0.3"
num = "0.4"
glidesort = "0.1"
csv = "1"
mutants = "0.0.3"

trade_aggregation = { version = "13", optional = true }

[dev-dependencies]
rand = "0.9"
test-case = "3"
tracing-test = { version = "0.2", features = ["no-env-filter"] }
criterion = { version = "0.8", features = ["html_reports"] }
# fpdec = { version = "0.10", features = ["serde-as-str", "num-traits"] }
fpdec = { version = "0.10.3", git = "https://github.com/MathisWellmann/fpdec.rs", rev = "40cf802", features = [
  "serde-as-str",
  "num-traits",
] }
proptest = "1.6"

[features]
trade_aggregation = ["dep:trade_aggregation"]

[[bench]]
name = "update_state"
harness = false

[[bench]]
name = "submit_market_order"
harness = false

[[bench]]
name = "submit_limit_order"
harness = false

[[bench]]
name = "decimal_comparison"
harness = false

[[bench]]
name = "check_active_orders"
harness = false

[[bench]]
name = "smart_candle"
harness = false

[[bench]]
name = "order_margin"
harness = false

[[bench]]
name = "position"
harness = false
